add:社員変更、社員削除、ログイン状態判定、ユーザ権限判定作成

--- a/spring_crud_sakuraihojo/src/main/resources/static/css/stylesheet.css
+++ b/spring_crud_sakuraihojo/src/main/resources/static/css/stylesheet.css
@@ -1,6 +1,13 @@
 ﻿@charset "UTF-8";
 
 /* ---- その他のスタイル調整用CSS ---- */
+#container {
+	display: flex;
+}
+
+.text_center{
+	text-align: center
+}
 
 /* ---- 文字の色 ---- */
 body {
