--- a/spring_crud_sakuraihojo/src/main/resources/templates/index.html
+++ b/spring_crud_sakuraihojo/src/main/resources/templates/index.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
 <!-- saved from url=(0034)http://localhost:7779/spring_crud/ -->
-<html xmlns:th="http://www.thymeleaf.org"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_3block :: layout(~{::body/content()})}"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="../css/layout.css" />
-<link rel="stylesheet" type="text/css" href="../css/stylesheet.css" />
 <title>社員管理システム</title>
 </head>
-<body>
-	
-	<header>
-		
-	<div class="content">
-		<div class="title">社員管理システム</div>
-		
-	</div>
-
-	</header>
-	
-	
+<body>	
 	<div class="content">
 		<article>
 			
@@ -29,6 +16,7 @@
 		<p>
 			<span th:errors="${loginForm.empId}"></span><br> 
 			<span th:errors="${loginForm.empPass}"></span><br>
+			<span th:text="${loginError}"></span><br>
 		</p>
 		<!-- エラーメッセージの出力(存在チェック) -->
 		<div class="login_form">
@@ -58,14 +46,5 @@
 
 		</article>
 	</div>
-	
-	
-	
-	<footer>
-		<div class="footer ">
-	
-	Copyright(C) 2022 System Shared co., ltd, ALL Rights Reserved
-</div>
-	</footer>
 
 </body></html>
