--- a/spring_crud_sakuraihojo/src/main/resources/templates/list/list.html
+++ b/spring_crud_sakuraihojo/src/main/resources/templates/list/list.html
@@ -1,52 +1,12 @@
 <!DOCTYPE html>
 <!-- saved from url=(0038)http://localhost:7779/spring_crud/list -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()})}"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="../../css/layout.css" />
-<link rel="stylesheet" type="text/css" href="../../css/stylesheet.css" />
 <title>社員管理システム</title>
 </head>
 <body>
-	
-	<header>
-		
 	<div class="content">
-		<div class="title">社員管理システム</div>
-		<div class="user_info">
-			ようこそ、<a href="http://localhost:7779/spring_crud/update/input/?empId=2"><span th:text="${session.loginUser.empName}"></span></a>さん<span class="pipeline">|</span><a th:href="@{/logout}">ログアウト</a>
-		</div>
-	</div>
-
-	</header>
-	<div class="content">
-		
-		<aside class="admin_menu">
-	  <div class="title">社員名検索</div>
-	 
-	  <div class="form">
-	    <form th:action="@{/list/empName}" method="get">
-	      <input type="text" name="empName">      
-	      <input type="submit" value="検索">
-	    </form>
-	  
-	  </div>
-	  <div class="title">部署名検索</div>
-	  <div class="form">
-	    <form th:action="@{/list/deptId}" method="get">
-
-	     <span>
-	      	<select name="deptId">
-	        	<option value="1" selected="">営業部</option>
-	        	<option value="2">経理部</option>
-	        	<option value="3">総務部</option>
-	      	</select>
-	     </span>
-
-	     <input type="submit" value="検索">
-	    </form>
-	  </div>
-	</aside>
 		
 		<article class="main">
 			
@@ -56,35 +16,40 @@
     <!-- フィルターの処理により、当該Thymeleaf処理完了後にログイン画面にリダイレクトする。 -->
 		
         <div class="regist_link">
-          <a th:href="@{/regist/input}">新規社員登録</a>
+          <a th:if="${session.loginUser.authority == 2}" th:href="@{/regist/input}">新規社員登録</a>
         </div>
      	 
 
-      	
-		<table class="list_table">
+      	<div th:if="${#lists.isEmpty(empList)}" class="text_center">
+			  <p>該当する社員は存在しません。</p>
+			  <a th:href="@{/list}">一覧表示に戻る</a>
+		</div>
+		<table th:unless="${#lists.isEmpty(empList)}" class="list_table">
 			<tbody><tr>
 				<th class="empId">社員ID</th>
 				<th class="empName">社員名</th>
-				
+				<div th:if="${session.loginUser.authority == 2}">
 	              <th class="gender">性別</th>
 	              <th class="address">住所</th>
 	              <th class="birthday">生年月日</th>
 	              <th class="authority">権限</th>
-	            
-	            <th class="deptName">部署名</th>
-	            
+				</div>
+	        	  <th class="deptName">部署名</th>
+	        	<div th:if="${session.loginUser.authority == 2}">
 	              <th class="button" colspan="2">操作</th>
-	            
+	            </div>
 			</tr>
 			<tr th:each="emp: ${empList}" th:object="${emp}">
 				<td th:text="*{empId}">1</td>
 				<td th:text="*{empName}"></td>
-				<td th:text="*{genderStr}">
-	            </td>
+				<div th:if="${session.loginUser.authority == 2}">
+				<td th:text="*{genderStr}"></td>
 	            <td th:text="*{address}"></td>
 	            <td th:text="${#dates.format(emp.birthday, 'yyyy/MM/dd')}"></td>
 	            <td th:text="*{authorityStr}"></td>
+				</div>
 	            <td th:text="*{department.deptName}"></td>
+				<div th:if="${session.loginUser.authority == 2}">
 				<td>
 					<form method="get" th:action="@{/update/input}">
 						<input type="hidden" name="empId" th:value="*{empId}">
@@ -92,23 +57,17 @@
 					</form>
 				</td>
 				<td>
-					<form method="get" action="http://localhost:7779/spring_crud/delete/check">
-						<input type="hidden" name="empId" value="1">
+					<form method="get" th:action="@{/delete/check}">
+						<input type="hidden" name="empId" th:value="*{empId}">
 						<input type="submit" value="削除" class="delete">
 					</form>
 				</td>
-				
+				</div>
 			</tr>
 		</tbody></table>
 
 		</article>
 	</div>
 	
-	<footer>
-		<div class="footer ">
-	
-	Copyright(C) 2022 System Shared co., ltd, ALL Rights Reserved
-</div>
-	</footer>
 
 </body></html>
