--- a/spring_crud_sakuraihojo/src/main/resources/templates/regist/regist_input.html
+++ b/spring_crud_sakuraihojo/src/main/resources/templates/regist/regist_input.html
@@ -1,56 +1,12 @@
 <!DOCTYPE html>
 <!-- saved from url=(0046)http://localhost:7779/spring_crud/regist/input -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()})}"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="../../css/layout.css" />
-<link rel="stylesheet" type="text/css" href="../../css/stylesheet.css" />
 <title>社員管理システム</title>
 </head>
 <body>
-	
-	<header>
-		
-	<div class="content">
-		<div class="title">社員管理システム</div>
-		<div class="user_info">
-			ようこそ、<a href="http://localhost:7779/spring_crud/update/input/?empId=2"><span>田中二郎</span></a>さん<span class="pipeline">|</span><a href="http://localhost:7779/spring_crud/logout">ログアウト</a>
-		</div>
-	</div>
-
-	</header>
-	<div class="content">
-		
-		<aside class="admin_menu">
-	  <div class="title">社員名検索</div>
-	 
-	  <div class="form">
-	    <form action="http://localhost:7779/spring_crud/list/empName" method="get">
-	      <input type="text" name="empName">
-	      
-	      <input type="submit" value="検索">
-	    </form>
-	  
-	  </div>
-	  <div class="title">部署名検索</div>
-	  <div class="form">
-	    <form action="http://localhost:7779/spring_crud/list/deptId" method="get">
-
-	     <span>
-	      	<select name="deptId">
-	        	<option value="1" selected="">営業部</option>
-	        	<option value="2">経理部</option>
-	        	<option value="3">総務部</option>
-	      	</select>
-	     </span>
-
-	     
-
-	     <input type="submit" value="検索">
-	    </form>
-	  </div>
-	</aside>
-		
+	<div class="content">		
 		<article class="main">
 			
 	<h3>社員登録入力画面</h3>
@@ -134,12 +90,5 @@
 
 		</article>
 	</div>
-	
-	<footer>
-		<div class="footer ">
-	
-	Copyright(C) 2022 System Shared co., ltd, ALL Rights Reserved
-</div>
-	</footer>
 
 </body></html>
