--- a/spring_crud_sakuraihojo/src/main/resources/templates/update/update_input.html
+++ b/spring_crud_sakuraihojo/src/main/resources/templates/update/update_input.html
@@ -1,59 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0055)http://localhost:7779/spring_crud/update/input/?empId=2 -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{common/layout_4block :: layout(~{::body/content()})}"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="../../css/layout.css" />
-<link rel="stylesheet" type="text/css" href="../../css/stylesheet.css" />
 <title>社員管理システム</title>
 </head>
 <body>
-	
-	<header>
-		
-	<div class="content">
-		<div class="title">社員管理システム</div>
-		<div class="user_info">
-			ようこそ、<a href="http://localhost:7779/spring_crud/update/input/?empId=2"><span>田中二郎</span></a>さん<span class="pipeline">|</span><a href="http://localhost:7779/spring_crud/logout">ログアウト</a>
-		</div>
-	</div>
-
-	</header>
-	<div class="content">
-		
-		<aside class="admin_menu">
-	  <div class="title">社員名検索</div>
-	 
-	  <div class="form">
-	    <form action="http://localhost:7779/spring_crud/list/empName" method="get">
-	      <input type="text" name="empName">
-	      
-	      <input type="submit" value="検索">
-	    </form>
-	  
-	  </div>
-	  <div class="title">部署名検索</div>
-	  <div class="form">
-	    <form action="http://localhost:7779/spring_crud/list/deptId" method="get">
-
-	     <span>
-	      	<select name="deptId">
-	        	<option value="1" selected="">営業部</option>
-	        	<option value="2">経理部</option>
-	        	<option value="3">総務部</option>
-	      	</select>
-	     </span>
-
-	     
-
-	     <input type="submit" value="検索">
-	    </form>
-	  </div>
-	</aside>
-		
-		<article class="main">
+	<article class="main">
 			
-		<h3>社員変更入力画面</h3>
+	<h3>社員変更入力画面</h3>
     <div class="update" th:object="${employeeBean}">
       <form th:action="@{/update/check}" method="post">
         <!-- エラーメッセージの出力 -->
@@ -97,7 +52,7 @@
             <input type="text" id="birthday" name="birthday" th:value="${#dates.format(employeeBean.birthday, 'yyyy/MM/dd')}"> (YYYY/MM/DD)
           </div>
         </div>
-        <div class="form">
+        <div class="form" th:if="${session.loginUser.authority == 2}">
           <div class="label">権限：</div>
           <div class="input">
             <input th:if="*{authority == null}" type="radio" value="1" id="authority1" name="authority" checked="checked">
@@ -119,11 +74,13 @@
         <div class="form">
           <div class="label"></div>
           <div class="input">
-            <input type="hidden" id="empId" name="empId" th:value="*{empId}"> <input type="submit" value="変更">
+            <input type="hidden" id="empId" name="empId" th:value="*{empId}">
+            <input th:unless="${session.loginUser.authority == 2}" type="hidden" id="authority" name="authority" th:value="*{authority}">
+            <input type="submit" value="変更">
           </div>
         </div>
       </form>
-      <form action="http://localhost:7779/spring_crud/list">
+      <form th:action="@{/list}">
         <div class="form">
           <div class="label"></div>
           <div class="input">
@@ -135,12 +92,5 @@
 
 		</article>
 	</div>
-	
-	<footer>
-		<div class="footer ">
-	
-	Copyright(C) 2022 System Shared co., ltd, ALL Rights Reserved
-</div>
-	</footer>
 
 </body></html>
