fix:テスト仕様書で発覚したバグ修正 　　　部署のドロップダウンリストをDBから取得して設定する仕様に変更

--- a/spring_crud_sakuraihojo/src/main/resources/templates/common/sidebar.html
+++ b/spring_crud_sakuraihojo/src/main/resources/templates/common/sidebar.html
@@ -21,9 +21,9 @@
 
 	     <span>
 	      	<select name="deptId">
-	        	<option value="1" selected="">営業部</option>
-	        	<option value="2">経理部</option>
-	        	<option value="3">総務部</option>
+	        	<th:block th:each="dept:${session.deptList}">
+      				<option th:value="${dept.deptId}" th:text="${dept.deptName}"></option>
+    			</th:block>
 	      	</select>
 	     </span>
 
